docs/7.52/md/abennews-610-coverage.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Releases 6.xx](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-6.htm) →  [Changes in Release 6.10](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-610.htm) → 

Coverage Analyzer in Release 6.10

The coverage analyzer enters the number of calls for ABAP program units, separated by time period, user, or subject. The following table lists all the program units and their respective keywords.

Program Unit

Keyword

Procedures

form, function, method

Dialog module

module

Event blocks

at line-selection, at pf, at selection-screen, at user-command, end of page, end of selection, get, get late, initialization, start-of-selection , top-of-page

Programs

program, report, function pool, class pool

A detailed description of Coverage Analyzer functions is available under the application help for the tool. (Start the Coverage Analyzer and choose Help → Application Help).