docs/7.57/md/abennews-610-coverage.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 6.xx](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-6.htm) →  [News for Release 6.10](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-610.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Coverage Analyzer in Release 6.10, ABENNEWS-610-COVERAGE, 757%0D%0A%0D%0AError:%0D%0A
%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Coverage Analyzer in Release 6.10

Coverage Analyzer is responsible for recording the number of calls for ABAP program units, by time period, user, or subject. The following table lists all the program units and their associated keywords.

Program Unit

Keyword

Procedures

form, function, method

Dialog modules

module

Event blocks

at line-selection, at pf, at selection-screen, at user-command, end of page, end of selection, get, get late, initialization, start-of-selection, top-of-page

Programs

program, report, function-pool, class-pool

A detailed description of Coverage Analyzer functions is available under the application help for the tool. Start Coverage Analyzer and choose Help → Application Help.